# slimweb

./: Cargo.toml  LICENSE  README.md
src/: body.rs  error.rs  lib.rs  macros.rs  multipart.rs  stream.rs
src/client/: mod.rs  request.rs  response.rs  tests.rs
src/server/: mod.rs  request.rs  response.rs  tests.rs
