[package]
name = "slimweb"
version = "0.1.0"
authors = [ "Bob Koller" ]
license = "MIT"
readme = "README.md"
description = "Slim HTTP 1.1 client/server library"
repository = "https://github.com/MirrorBytes/slimweb"
keywords = [ "web", "http", "https", "rest", "api" ]
include = [ "Cargo.toml", "src/**/*.rs", "LICENSE", "README.md" ]
edition = "2018"

[features]
default = [ "client" ]

client = []
server = []

tls = [ "rustls", "webpki", "webpki-roots", "lazy_static" ]

json = [ "serde_json" ]

compress = [ "flate2" ]

[dependencies]
log = "0.4"
base64 = "0.11"
punycode = { version = "0.4", optional = true }

serde_json = { version = "1", optional = true }

rustls = { version = "0.16", optional = true }
webpki = { version = "0.21", optional = true }
webpki-roots = { version = "0.18", optional = true }
lazy_static = { version = "1.4", optional = true }

flate2 = { version = "1.0", optional = true }
